# uptime-monitor

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  README.md  config_example.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/uptime_monitor/: __init__.py  dashboard.py
src/uptime_monitor/static/css/: styles.css
src/uptime_monitor/templates/: index.html  login.html
tests/: conftest.py  test_dashboard.py  test_maintenance_window.py  test_service_monitor.py
