[project]
name = "uptime-monitor"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timo", email = "timo@timoschaepe.de" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "ping3==5.1.5",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rich==14.2.0",
]

[project.scripts]
uptime-monitor = "uptime_monitor:run"
uptime-dashboard = "uptime_monitor.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "ruff==0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/uptime_monitor",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/uptime_monitor"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.html]
directory = "htmlcov"
title = "Uptime Monitor Coverage Report"
